[gd_scene load_steps=8 format=2]

[ext_resource path="res://OptimusPrinceps.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://BossFight.gd" type="Script" id=2]
[ext_resource path="res://back_cave.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 1 )

[node name="BossFight" type="Node2D"]
script = ExtResource( 2 )

[node name="back_cave" type="Sprite" parent="."]
position = Vector2( 512, 304 )
scale = Vector2( 0.512, 0.3 )
texture = ExtResource( 3 )

[node name="Hand" type="Node2D" parent="."]

[node name="EndTurn" type="Button" parent="."]
margin_left = 610.546
margin_top = 98.2739
margin_right = 903.546
margin_bottom = 198.274
custom_fonts/font = SubResource( 4 )
text = "End Turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerHealth" type="Label" parent="."]
margin_left = 70.5556
margin_top = 59.2162
margin_right = 307.556
margin_bottom = 113.216
custom_fonts/font = SubResource( 1 )
text = "Player HP:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyHealth" type="Label" parent="."]
margin_left = 68.0357
margin_top = 149.238
margin_right = 294.036
margin_bottom = 203.238
custom_fonts/font = SubResource( 2 )
text = "Enemy HP:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mana" type="Label" parent="."]
margin_left = 64.2559
margin_top = 235.935
margin_right = 214.256
margin_bottom = 289.935
custom_fonts/font = SubResource( 3 )
text = "Mana:"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="EndTurn" to="." method="_on_EndTurn_pressed"]
